--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 </div>
 
 <div class="project-card">
-    <img src="musée.png" alt="Musée des Traditions">
+    <img src="musee.png" alt="Musée des Traditions">
   <h3>Musée des Traditions</h3>
 
   <p>Site du Musée des Traditions de Biscarrosse, 
@@ -289,4 +289,5 @@
   })();
 </script>
 </body>
+
 </html>
