--- a/index.html
+++ b/index.html
@@ -229,13 +229,13 @@
 </div>
 
 <div class="project-card">
-    <img src="musee.png" alt="Musée des Traditions">
+    <img src="musee.png">
   <h3>Musée des Traditions</h3>
 
   <p>Site du Musée des Traditions de Biscarrosse, 
-    également la ville où j'habite. Ce site est à 
-    refaire avec un camarade de classe bénévolement, 
-    sous la demande de notre professeur de SIN.
+    également la ville où j'habitais. Ce site est à 
+    refaire avec un ancien camarade de classe bénévolement, 
+    sous la demande de notre ancien professeur de SIN.
   </p>
   <a class="btn" href="https://www.museetraditions.com/index.php?option=com_contact&view=contact&id=1&Itemid=59" target="_blank">Aller voir</a>
 </div>
@@ -291,3 +291,4 @@
 </body>
 
 </html>
+
